Add relativitization citation

--- a/khl/cv/my-representative-publication.bib
+++ b/khl/cv/my-representative-publication.bib
@@ -37,3 +37,12 @@
   publisher = {{ISSI} Society},
   year      = {2021},
 }
+
+@software{relativitization,
+  author       = {Lai Kwun Hang},
+  title        = {Relativitization},
+  year         = 2022,
+  doi          = {10.5281/zenodo.6120765},
+  url          = {https://doi.org/10.5281/zenodo.6120765},
+  howpublished = {https://github.com/Adriankhl/relativitization},
+}
