--- a/khl/cv/selected_academic_publications.tex
+++ b/khl/cv/selected_academic_publications.tex
@@ -6,6 +6,20 @@
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
+\cvsubsection{Software}
+
+\begin{refsection}
+	\nocite{relativitization}
+
+	\printbibliography[
+	heading=none,
+	sorting=ydnt
+	]
+\end{refsection}
+
+%-------------------------------------------------------------------------------
+%	SUBSECTION TITLE
+%-------------------------------------------------------------------------------
 \cvsubsection{Conference Proceedings}
 
 \begin{refsection}
