Add simulation paper citation

--- a/khl/cv/my-representative-publication.bib
+++ b/khl/cv/my-representative-publication.bib
@@ -46,3 +46,10 @@
   url          = {https://doi.org/10.5281/zenodo.6120765},
   howpublished = {https://github.com/Adriankhl/relativitization},
 }
+
+@misc{lai2022simulation,
+    title   = {On social simulation in 4D relativistic spacetime}, 
+    author  = {Lai Kwun Hang},
+    year    = {2022},
+    howpublished = {https://github.com/Adriankhl/relativitization-framework-doc/blob/main/papers/on-social-simulation-in-4D-relativistic-spacetime/pdf/paper.pdf},
+}
