--- a/khl/cv/selected_academic_publications.tex
+++ b/khl/cv/selected_academic_publications.tex
@@ -20,6 +20,21 @@
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
+\cvsubsection{Preprints}
+
+\begin{refsection}
+	\nocite{lai2022simulation}
+
+	\printbibliography[
+	heading=none,
+	sorting=ydnt
+	]
+\end{refsection}
+
+
+%-------------------------------------------------------------------------------
+%	SUBSECTION TITLE
+%-------------------------------------------------------------------------------
 \cvsubsection{Conference Proceedings}
 
 \begin{refsection}
