Update physics research highlight

--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -11,14 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {Relativitization: an agent-based simulation toolkit, a model, and a computer game} % Research project
-    {Work-in-progress personal research project} % Research organization
+    {Relativitization: an agent-based simulation framework in 4D, relativistic spacetime} % Research project
+    {Ph.D. research project} % Research organization
     {Leiden, The Netherlands} % Location
     {2021 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Try to understand the distant future of the interstellar human civilization by simulations.}
-        \item {Model the science of science in the distant future.}
+        \item {Create a framework for social scientists to simulate interstellar society.}
+        \item {asdfsd}
+        \item {Build a video game on top of the framework.}
       \end{cvitems}
     }
 
@@ -30,8 +31,8 @@
     {2020 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Prepare the data analysis platform.}
-        \item {Construct simulation and statistical models for data analysis.}
+        \item {Construct Bayesian models on the relation between the gender bias and criteria of funding application.}
+        \item {Perform data cleaning and analysis.}
       \end{cvitems}
     }
 
@@ -43,23 +44,22 @@
     {2016 - 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Proposed a way to constrain black-hole horizon effects.}
-        \item {Studied the possibility to detect intermediate-mass black hole by gravitational wave lensing.}
-        \item {Wrote C and Python programs for simulations and data analysis.}
+        \item {Proposed methods to constrain black-hole horizon effects.}
+        \item {Ran simulations of detecting intermediate-mass black hole by gravitational wave lensing.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
-  \cventry
-    {Majorana Stellar Representation of Quantum Entanglement} % Research project
-    {Undergraduate Research Project} % Research organization
-    {Hong Kong, China} % Location
-    {2015} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Visualized spin-1/2 particle states by Majorana stars.}
-      \end{cvitems}
-    }
+%  \cventry
+%    {Majorana Stellar Representation of Quantum Entanglement} % Research project
+%    {Undergraduate Research Project} % Research organization
+%    {Hong Kong, China} % Location
+%    {2015} % Date(s)
+%    {
+%      \begin{cvitems} % Description(s) of tasks/responsibilities
+%        \item {Visualized spin-1/2 particle states by Majorana stars.}
+%      \end{cvitems}
+%    }
 
 %---------------------------------------------------------
 \end{cventries}
