Complete research highlight

--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -17,8 +17,8 @@
     {2021 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Create a framework for social scientists to simulate interstellar society.}
-        \item {asdfsd}
+        \item {Create a computational framework for social scientists to simulate interstellar society.}
+        \item {Analyze the effect of relativistic physics on agent-based models.}
         \item {Build a video game on top of the framework.}
       \end{cvitems}
     }
