Clean up presentations

--- a/khl/cv/presentations.tex
+++ b/khl/cv/presentations.tex
@@ -18,7 +18,7 @@
     {2021} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced my research on constructing simulation models of funding applicants' behaviours.}
+        \item {Introduced my research on behavioural models of funding applicants.}
       \end{cvitems}
     }
 
@@ -30,7 +30,7 @@
     {2021} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced my research on utilizing game theoretical models and agent-based models to study the academic funding system.}
+        \item {Presented my research on game theoretical models and agent-based models of the academic funding system.}
       \end{cvitems}
     }
 
@@ -66,7 +66,7 @@
     {2017} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced my research on gravitational lensing of gravitational waves.}
+        \item {Introduced gravitational lensing of gravitational waves.}
         \item {Best speaker of the first CUHK Physics Student Conference.}
       \end{cvitems}
     }
