--- a/khl/cv/education.tex
+++ b/khl/cv/education.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Ph.D. in Science of Science} % Degree
+    {Ph.D. in Quantitative Science Studies} % Degree
     {Centre for Science and Technology Studies, Leiden University} % Institution
     {Leiden, The Netherlands} % Location
     {2019 - present} % Date(s)
