Update simulation publication preprint

--- a/khl/cv/my-representative-publication.bib
+++ b/khl/cv/my-representative-publication.bib
@@ -48,8 +48,13 @@
 }
 
 @misc{lai2022simulation,
-    title   = {On social simulation in 4D relativistic spacetime}, 
-    author  = {Lai Kwun Hang},
-    year    = {2022},
-    howpublished = {https://github.com/Adriankhl/relativitization-framework-doc/blob/main/papers/on-social-simulation-in-4D-relativistic-spacetime/pdf/paper.pdf},
+  doi = {10.48550/ARXIV.2206.11019},
+  url = {https://arxiv.org/abs/2206.11019},
+  howpublished = {https://arxiv.org/abs/2206.11019},
+  author = {Lai, Kwun Hang},
+  keywords = {Physics and Society (physics.soc-ph), FOS: Physical sciences, FOS: Physical sciences},
+  title = {On social simulation in 4D relativistic spacetime},
+  publisher = {arXiv},
+  year = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
 }
