Add conferences in 2022

--- a/khl/cv/presentations.tex
+++ b/khl/cv/presentations.tex
@@ -12,6 +12,42 @@
 
 %---------------------------------------------------------
   \cventry
+    {On social simulation in 4D relativistic spacetime} % Role
+    {Social Simulation Conference} % Event
+    {Milan, Italy} % Location
+    {2022} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {Explained the mathematical and algorithmic details of my simulation framework.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Relativitization: a turn-based strategy game in 4D relativistic spacetime} % Role
+    {Social Simulation Conference} % Event
+    {Milan, Italy} % Location
+    {2022} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {Poster presentation about my turn-based strategy game.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Relativitization: a social simulation framework in 4D relativistic spacetime} % Role
+    {International conference of computational science} % Event
+    {London, United Kingdom} % Location
+    {2022} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {Poster presentation about my interstellar social simulation framework.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Behavioural models of funding applications} % Role
     {Funded and Unfunded Science: Academic Inequalities and Epistemic Gaps} % Event
     {Prague, Czech Republic} % Location
