Use lualatex for cv

--- a/khl/cv.tex
+++ b/khl/cv.tex
@@ -1,6 +1,6 @@
-% arara: xelatex
+% arara: lualatex
 % arara: biber
-% arara: xelatex
+% arara: lualatex
 % arara: clean: { extensions: [ acn,acr,alg,aux,bbl,bcf,blg,glg,glo,gls,idx,ilg,ind,ist,log,lof,lol,lot,out,ptc,toc,run.xml ]}
 
 
