--- a/khl/coverletter.tex
+++ b/khl/coverletter.tex
@@ -1,3 +1,6 @@
+% arara: lualatex
+% arara: clean: { extensions: [ acn,acr,alg,aux,bbl,bcf,blg,glg,glo,gls,idx,ilg,ind,ist,log,lof,lol,lot,out,ptc,toc,run.xml ]}
+
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 % Awesome CV LaTeX Template for Cover Letter
@@ -50,7 +53,7 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
-\photo[circle,noedge,left]{./examples/profile}
+%\photo[circle,noedge,left]{./profile}
 \name{Claud D.}{Park}
 \position{Site Reliability Engineer{\enskip\cdotp\enskip}Software Architect}
 \address{235, World Cup buk-ro, Mapo-gu, Seoul, 03936, Republic of Korea}
