Add linkedin to cv

--- a/khl/cv.tex
+++ b/khl/cv.tex
@@ -69,7 +69,7 @@
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com}
 \github{Adriankhl}
-%\linkedin{posquit0}
+\linkedin{adrian-k-h-lai}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
