Fill coverletter information

--- a/khl/cv.tex
+++ b/khl/cv.tex
@@ -65,7 +65,7 @@
 %\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
 
 \mobile{(+31) 6-2184-1392}
-\email{k.h.lai@cwts.leidenuniv.nl}
+\email{adrian.k.h.lai@gmail.com}
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com}
 \github{Adriankhl}
