Add knowledge dynamics paper to CV

--- a/khl/cv/my-representative-publication.bib
+++ b/khl/cv/my-representative-publication.bib
@@ -32,10 +32,12 @@
                Ronald Rousseau},
   title     = {Constructing models of academic funding system: relation between the amount of funding and the efficiency},
   booktitle = {Proceedings of the 18th International Conference of the International Society for Scientometrics and Informetrics,
-               Leuven, Belgium, July 12-15, 2021},
+               Leuven, Belgium},
   pages     = {621--632},
   publisher = {{ISSI} Society},
   year      = {2021},
+  doi       = {10.5281/zenodo.8143367},
+  url       = {https://doi.org/10.5281/zenodo.8143367},
 }
 
 @software{relativitization,
@@ -50,11 +52,22 @@
 @misc{lai2022simulation,
   doi = {10.48550/ARXIV.2206.11019},
   url = {https://arxiv.org/abs/2206.11019},
-  howpublished = {https://arxiv.org/abs/2206.11019},
   author = {Lai, Kwun Hang},
   keywords = {Physics and Society (physics.soc-ph), FOS: Physical sciences, FOS: Physical sciences},
   title = {On social simulation in 4D relativistic spacetime},
   publisher = {arXiv},
+  booktitle = {Advances in Social Simulation - Proceedings of the 17th Social Simulation Conference, European Social Simulation Association},
   year = {2022},
   copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@misc{lai_kwun_hang_2023_8140436,
+  author       = {Lai Kwun Hang},
+  title        = {Interstellar knowledge dynamics},
+  month        = jul,
+  year         = 2023,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.8140436},
+  url          = {https://doi.org/10.5281/zenodo.8140436},
+  howpublished = {Accepted by the 18th Social Simulation Conference, https://doi.org/10.5281/zenodo.8140436},
 }
