--- a/khl/cv/selected_academic_publications.tex
+++ b/khl/cv/selected_academic_publications.tex
@@ -23,7 +23,7 @@
 \cvsubsection{Preprints}
 
 \begin{refsection}
-	\nocite{lai2022simulation}
+    \nocite{lai_kwun_hang_2023_8140436}
 
 	\printbibliography[
 	heading=none,
@@ -38,6 +38,7 @@
 \cvsubsection{Conference Proceedings}
 
 \begin{refsection}
+	\nocite{lai2022simulation}
     \nocite{lai2021issi}
 
 	\printbibliography[
