Update presentatsions of CV

--- a/khl/cv/presentations.tex
+++ b/khl/cv/presentations.tex
@@ -9,6 +9,41 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+%---------------------------------------------------------
+  \cventry
+    {Interstellar social simulation framework and game development in Kotlin} % Role
+    {KotlinConf} % Event
+    {Amsterdam, the Netherlands} % Location
+    {2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {Talked about some Kotlin-specific aspects of my software.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Developing an interstellar social simulation framework as a PhD student in social science} % Role
+    {Research Software Community Leiden Presents: Software Softlaunch} % Event
+    {Leiden, the Netherlands} % Location
+    {2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {Shared my experience as a research software developer while doing my PhD.}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Relativitization: an interstellar social simulation framework and a turn-based strategy game} % Role
+    {Free and Open source Software Developers' European Meeting (FOSDEM)} % Event
+    {Brussels, Belgium} % Location
+    {2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {Shared my experience on developing my open source software.}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
@@ -50,7 +85,7 @@
   \cventry
     {Behavioural models of funding applications} % Role
     {Funded and Unfunded Science: Academic Inequalities and Epistemic Gaps} % Event
-    {Prague, Czech Republic} % Location
+    {Prague, Czech Republic (Online)} % Location
     {2021} % Date(s)
     {
       \begin{cvitems} % Description(s)
@@ -62,7 +97,7 @@
   \cventry
     {Constructing models of academic funding system: relation between the amount of funding and the efficiency} % Role
     {The 18th International Conference of the International Society for Scientometrics and Informetrics} % Event
-    {Belgium (Virtual)} % Location
+    {Belgium (Online)} % Location
     {2021} % Date(s)
     {
       \begin{cvitems} % Description(s)
@@ -74,7 +109,7 @@
   \cventry
     {Challenges in Using Bibliometric Indicators to Assess Peer Review Decisions: A Simulation Model} % Role
     {PEERE International Conference on Peer Review 2020} % Event
-    {Spain (Virtual)} % Location
+    {Spain (Online)} % Location
     {2020} % Date(s)
     {
       \begin{cvitems} % Description(s)
