Add committees in CV

--- a/khl/cv.tex
+++ b/khl/cv.tex
@@ -117,11 +117,11 @@
 \input{cv/presentations.tex}
 \input{cv/skills.tex}
 \input{cv/honors_and_awards.tex}
+\input{cv/committees.tex}
 \input{cv/other_academic_publications.tex}
 %\input{cv/experience.tex}
 %\input{cv/extracurricular.tex}
 %\input{cv/writing.tex}
-%\input{cv/committees.tex}
 
 
 %-------------------------------------------------------------------------------
