Fix committee layout

--- a/khl/cv/committees.tex
+++ b/khl/cv/committees.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Organizing Committee Member} % Position
+    {Organizer} % Position
     {The 27th International Conference on Science, Technology and Innovation Indicators} % Committee
     {The Netherlands} % Location
     {2023} % Date(s)
