--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -20,6 +20,7 @@
         \item {Create a computational framework for social scientists to simulate interstellar agent-based models.}
         \item {Build models to demonstrate the effect relativistic physics on interstellar societies.}
         \item {Develop a video game on top of the framework.}
+        \item {Programming language: Kotlin.}
       \end{cvitems}
     }
 
@@ -33,6 +34,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Construct Bayesian models on the relation between the gender bias and criteria of funding application.}
         \item {Perform data cleaning and analysis.}
+        \item {Programming language: Python.}
       \end{cvitems}
     }
 
@@ -46,6 +48,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Proposed methods to constrain black-hole horizon effects.}
         \item {Ran simulations of detecting intermediate-mass black hole by gravitational wave lensing.}
+        \item {Programming language: C and Python.}
       \end{cvitems}
     }
 
