--- a/khl/coverletter.tex
+++ b/khl/coverletter.tex
@@ -91,7 +91,7 @@
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Research Software Engineer – Natural Sciences}
+\lettertitle{Job Application for Research Software Engineer – Social Sciences \& Humanities}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -123,7 +123,13 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+I identify myself as a physicist, in a social science department, working mostly on software development.
+I started to get serious in programming when I did my master research in astrophysics,
+which I had to work with Linux, supercomputers, simulation, and data analysis.
+Then, I came to Leiden to do my PhD in social science,
+which I gained some experiences in databases, textual analysis, network analysis,
+and agent-based simulation.
+I am supposed 
 
 \lettersection{Why the Netherlands eScience Center?}
 Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
