Add bash to skill

--- a/khl/cv/skills.tex
+++ b/khl/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Kotlin, Julia, Python, Java, LaTeX} % Skills
+    {Kotlin, Julia, Python, Java, Bash, LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
