Complete about me

--- a/khl/coverletter.tex
+++ b/khl/coverletter.tex
@@ -124,12 +124,32 @@
 
 \lettersection{About Me}
 I identify myself as a physicist, in a social science department, working mostly on software development.
-I started to get serious in programming when I did my master research in astrophysics,
+I started to get serious about programming when I did my master research in astrophysics,
 which I had to work with Linux, supercomputers, simulation, and data analysis.
 Then, I came to Leiden to do my PhD in social science,
 which I gained some experiences in databases, textual analysis, network analysis,
 and agent-based simulation.
-I am supposed 
+
+Because of some catastrophic engineering mistakes made by the developers in a foreign institute,
+the data and the scripts for my primary PhD research project were completely erased on the server,
+and the data platform has stopped functioning since then.
+To rescue my PhD, I decided to dive deep into software development.
+I dedicated over a year to develop an agent-based simulation framework for interstellar social model
+in 4D, relativistic spacetime.
+On top of the framework, I have also developed a turn-based strategy game with server-client architecture
+and GUI that works on PC and Android.
+I am quite proud of being able to leverage my knowledge on physics, social science, and software development
+to independently create such a cool project, and I have shared it in multiple social science conferences
+and software development conferences.
+
+I am also an enthusiastic open source contributor. 
+Whenever I come across a bug in an open source software,
+I always try to fix it and contribute a pull request back if possible.
+I particularly like to work on C++ software because it helps me
+to build up my engineering skill in a lower level language,
+which I rarely had the chance to practice in my social science research projects.
+
+
 
 \lettersection{Why the Netherlands eScience Center?}
 Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
