Completed cover letter for escience center

--- a/khl/coverletter.tex
+++ b/khl/coverletter.tex
@@ -124,38 +124,45 @@
 
 \lettersection{About Me}
 I identify myself as a physicist, in a social science department, working mostly on software development.
-I started to get serious about programming when I did my master research in astrophysics,
-which I had to work with Linux, supercomputers, simulation, and data analysis.
+During my master research in astrophysics,
+I learned to work with Linux, supercomputers, simulation, and data analysis.
 Then, I came to Leiden to do my PhD in social science,
-which I gained some experiences in databases, textual analysis, network analysis,
+which I gained some experiences in databases, textual analysis, machine learning, network analysis,
 and agent-based simulation.
 
 Because of some catastrophic engineering mistakes made by the developers in a foreign institute,
-the data and the scripts for my primary PhD research project were completely erased on the server,
-and the data platform has stopped functioning since then.
+my primary research project became impossible to continue.
 To rescue my PhD, I decided to dive deep into software development.
-I dedicated over a year to develop an agent-based simulation framework for interstellar social model
+I dedicated over 2 years to develop an open source agent-based simulation framework for interstellar social model
 in 4D, relativistic spacetime.
 On top of the framework, I have also developed a turn-based strategy game with server-client architecture
 and GUI that works on PC and Android.
 I am quite proud of being able to leverage my knowledge on physics, social science, and software development
-to independently create such a cool project, and I have shared it in multiple social science conferences
+to independently create such a cool software from scratch, and I have shared it in multiple social science conferences
 and software development conferences.
 
 I am also an enthusiastic open source contributor. 
 Whenever I come across a bug in an open source software,
-I always try to fix it and contribute a pull request back if possible.
-I particularly like to work on C++ software because it helps me
-to build up my engineering skill in a lower level language,
+I always try to fix it and contribute back a pull request if possible.
+I particularly enjoy to work on C++ software because it helps me
+to build up my engineering skill for lower-level details,
 which I rarely had the chance to practice in my social science research projects.
 
-
-
 \lettersection{Why the Netherlands eScience Center?}
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+The failure of my primary resesarch project taught me a lesson -
+it is of utmost importance to have competitive research software engineers.
+I have talked to several people from the eScience Center last year,
+and I am impressed by the idea of gathering software talents in a place to support research.
+So far, the center seems to be a pretty successful social experiment.
+As a technical person who enjoy intellectual challenges,
+I am excited to see the possibility to work on a variety of the software projects within the center.
 
-\lettersection{Why Me?}
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+In conclusion, my quantitative background, my experience in social science research,
+and my capability of doing proper software development make me a good fit
+for the eScience Center and specifically this position.
+Thank you for your consideration, I am looking forward to hearing back from your team.
+
+%\lettersection{Why Me?}
 
 \end{cvletter}
 
