--- a/khl/coverletter-escience.tex
+++ b/khl/coverletter-escience.tex
@@ -124,7 +124,7 @@
 
 \lettersection{About Me}
 I identify myself as a physicist, in a social science department, working mostly on software development.
-During my master research in astrophysics,
+During my master's research in astrophysics,
 I learned to work with Linux, supercomputers, simulation, and data analysis.
 Then, I came to Leiden to do my PhD in social science,
 which I gained some experiences in databases, textual analysis, machine learning, network analysis,
@@ -137,25 +137,25 @@ I dedicated over 2 years to develop an open source agent-based simulation framew
 in 4D, relativistic spacetime.
 On top of the framework, I have also developed a turn-based strategy game with server-client architecture
 and GUI that works on PC and Android.
-I am quite proud of being able to leverage my knowledge on physics, social science, and software development
+I am quite proud of being able to leverage my knowledge of physics, social science, and software development
 to independently create such a cool software from scratch, and I have shared it in multiple social science conferences
 and software development conferences.
 
 I am also an enthusiastic open source contributor. 
 Whenever I come across a bug in an open source software,
 I always try to fix it and contribute back a pull request if possible.
-I particularly enjoy to work on C++ software because it helps me
+I particularly enjoy working on C++ projects because it helps me
 to build up my engineering skill for lower-level details,
 which I rarely had the chance to practice in my social science research projects.
 
 \lettersection{Why the Netherlands eScience Center?}
-The failure of my primary resesarch project taught me a lesson -
+The failure of my primary research project taught me a lesson -
 it is of utmost importance to have competitive research software engineers.
 I have talked to several people from the eScience Center last year,
 and I am impressed by the idea of gathering software talents in a place to support research.
 So far, the center seems to be a pretty successful social experiment.
-As a technical person who enjoy intellectual challenges,
-I am excited to see the possibility to work on a variety of the software projects within the center.
+As a technical person who enjoys intellectual challenges,
+I am excited to see the variety of software projects within the center.
 
 In conclusion, my quantitative background, my experience in social science research,
 and my capability of doing proper software development make me a good fit
