--- a/khl/coverletter.tex
+++ b/khl/coverletter.tex
@@ -149,7 +149,7 @@ to build up my engineering skill for lower-level details,
 which I rarely had the chance to practice in my social science research projects.
 
 \lettersection{Why the Netherlands eScience Center?}
-The failure of my primary research project taught me a lesson -
+The failure of my primary PhD research project taught me a lesson -
 it is of utmost importance to have competitive research software engineers.
 I have talked to several people from the eScience Center last year,
 and I am impressed by the idea of gathering software talents in a place to support research.
