Add expected graduation date

--- a/khl/cv/education.tex
+++ b/khl/cv/education.tex
@@ -14,7 +14,7 @@
     {Ph.D. in Quantitative Science Studies} % Degree
     {Centre for Science and Technology Studies, Leiden University} % Institution
     {Leiden, The Netherlands} % Location
-    {2019 - present} % Date(s)
+    {2019 - present (Expected graduation: Early 2024)} % Date(s)
     {}
 
 %---------------------------------------------------------
