Reformat expected graduation

--- a/khl/cv/education.tex
+++ b/khl/cv/education.tex
@@ -14,8 +14,12 @@
     {Ph.D. in Quantitative Science Studies} % Degree
     {Centre for Science and Technology Studies, Leiden University} % Institution
     {Leiden, The Netherlands} % Location
-    {2019 - present (Expected graduation: Early 2024)} % Date(s)
-    {}
+    {2019 - present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Expected graduation: early 2024}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
