Complete adyen cover letter

--- a/khl/coverletter-adyen.tex
+++ b/khl/coverletter-adyen.tex
@@ -124,42 +124,41 @@
 
 \lettersection{About Me}
 I identify myself as a physicist, in a social science department, working mostly on software development.
-During my master's research in astrophysics,
-I learned to work with Linux, supercomputers, simulation, and data analysis.
-Then, I came to Leiden to do my PhD in social science,
-which I gained some experiences in databases, textual analysis, machine learning, network analysis,
-and agent-based simulation.
+Because of my interdisciplinary reseach background,
+I have experience in processing, analyzing and visualizing a variety of data in natural science and social science.
+The typical data pipeline in my current institute involves queries from a Microsoft SQL Server,
+which teaches me solid knowledge in SQL.
 
-Because of some catastrophic engineering mistakes made by the developers in a foreign institute,
-my primary research project became impossible to continue.
-To rescue my PhD, I decided to dive deep into software development.
-I dedicated over 2 years to develop an open source agent-based simulation framework for interstellar social model
-in 4D, relativistic spacetime.
-On top of the framework, I have also developed a turn-based strategy game with server-client architecture
-and GUI that works on PC and Android.
-I am quite proud of being able to leverage my knowledge of physics, social science, and software development
-to independently create such a cool software from scratch, and I have shared it in multiple social science conferences
-and software development conferences.
+Over the last two and a half years,
+I have been working on a Kotlin project for my PhD -
+an agent-based simulation framework and a turn-based strategy game in 4D, relativistic spacetime,
+such that people can utilize it to study interstellar societies.
+The game has a http-based server-client architecture for multiplayer and a functioning GUI,
+and the computation and communication are parallelized by coroutine.
+The software follows good software development practice, e.g., having unit testing and logging.
+I am quite proud of being able to create such a cool software from scratch,
+and I have presented the project in many different conferences including KotlinConf.
+Since Kotlin is closely related to Java,
+I have the confident to be a competent Java developer as well.
 
-I am also an enthusiastic open source contributor. 
+Besides academic work, I am an enthusiastic open source contributor. 
 Whenever I come across a bug in an open source software,
 I always try to fix it and contribute back a pull request if possible.
-I particularly enjoy working on C++ projects because it helps me
-to build up my engineering skill for lower-level details,
-which I rarely had the chance to practice in my social science research projects.
+It is fun to learn about new projects and pick up new programming languages.
 
-\lettersection{Why the Netherlands eScience Center?}
-The failure of my primary PhD research project taught me a lesson -
-it is of utmost importance to have competitive research software engineers.
-I have talked to several people from the eScience Center last year,
-and I am impressed by the idea of gathering software talents in a place to support research.
-So far, the center seems to be a pretty successful social experiment.
-As a technical person who enjoys intellectual challenges,
-I am excited to see the variety of software projects within the center.
+\lettersection{Why Adyen?}
+As someone from academia,
+I am always curious about how it is like to work on real-world application
+on a global scale.
+Adyen, being a top player in the payment industry,
+provides such an opportunity.
+Being in the Netherlands for a while,
+I really appreciate Dutch's inclusiveness and directness,
+which are also the core values of Adyen.
+The competitiveness and the vision of Adyen make it an attractive workplace.
 
-In conclusion, my quantitative background, my experience in social science research,
-and my capability of doing proper software development make me a good fit
-for the eScience Center and specifically this position.
+In conclusion, my technical capabilities and data-oriented research experiences
+fit well for this possition.
 Thank you for your consideration, I am looking forward to hearing back from your team.
 
 %\lettersection{Why Me?}
