Fix grammar for adyen

--- a/khl/coverletter-adyen.tex
+++ b/khl/coverletter-adyen.tex
@@ -124,7 +124,7 @@
 
 \lettersection{About Me}
 I identify myself as a physicist, in a social science department, working mostly on software development.
-Because of my interdisciplinary reseach background,
+Because of my interdisciplinary research background,
 I have experience in processing, analyzing and visualizing a variety of data in natural science and social science.
 The typical data pipeline in my current institute involves queries from a Microsoft SQL Server,
 which teaches me solid knowledge in SQL.
@@ -158,7 +158,7 @@ which are also the core values of Adyen.
 The competitiveness and the vision of Adyen make it an attractive workplace.
 
 In conclusion, my technical capabilities and data-oriented research experiences
-fit well for this possition.
+fit well for this position.
 Thank you for your consideration, I am looking forward to hearing back from your team.
 
 %\lettersection{Why Me?}
