Add SQL to research highlights

--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -32,7 +32,7 @@
     {2020 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Programming language: Python.}
+        \item {Programming language: SQL and Python.}
         \item {Construct Bayesian models on the relation between the gender bias and criteria of funding application.}
         \item {Perform data cleaning and analysis.}
       \end{cvitems}
