--- a/khl/coverletter-adyen.tex
+++ b/khl/coverletter-adyen.tex
@@ -184,3 +184,14 @@ The game must have a GUI, and I would like it to have multiplayer functionality.
 In general, it is quite challenging to turn a cool idea into a software with more than 60k lines of code, while keeping everything to function well together. I surely have become a more mature developer after the project.
 \fi
 
+
+\iffalse
+Why are you interested in joining Adyen?
+
+Adyen is a top player in the payment industry, where it offers an opportunity to work with data on a global scale. Besides, the Dutch directness is a valuable perk in a workplace.
+
+What is your experience with Data Engineering or Big Data technology?
+
+I have over 6 years of experience in data-oriented research for both natural science and social science, with “biggish” (order or TB) data. Having created and contributed to several open projects, I am capable of doing proper software engineering.
+
+\fi
