Add game development

--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cventry
     {Relativitization: an agent-based simulation framework in 4D, relativistic spacetime} % Research project
-    {Research software development} % Research organization
+    {Research software/game development} % Research organization
     {Leiden, The Netherlands} % Location
     {2021 - present} % Date(s)
     {
