Reorder cv items

--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Research Highlights}
+\cvsection{Research/Work Highlights}
 
 
 %-------------------------------------------------------------------------------
